<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="18dp">

    <TextView
        android:id="@+id/assetdetails_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal"
        android:letterSpacing="0.165"
        android:textAllCaps="true"
        android:textColor="@color/brand_green_darker"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Icons &amp; UI" />

    <TextView
        android:id="@+id/assetdetails_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/rubik_bold"
        android:maxLines="1"
        android:textAllCaps="true"
        android:textColor="@color/brand_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_category"
        app:layout_goneMarginTop="0dp"
        tools:text="[GUI] Emerald Treasure — THE EMERALD INTERFACE" />

    <LinearLayout
        android:id="@+id/assetdetails_asset_price_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_name">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assetdetails_asset_price"
            android:textColor="@color/brand_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assetdetails_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="$14.00" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assetdetails_asset_identifier_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item_grey"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_asset_price_wrap">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_details_id"
            android:textColor="@color/brand_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assetdetails_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_black"
            android:textSize="16sp"
            tools:text="22305" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assetdetails_asset_version_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_asset_identifier_wrap">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assetdetails_asset_version"
            android:textColor="@color/brand_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assetdetails_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_black"
            android:textSize="16sp"
            tools:text="1.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assetdetails_asset_status_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item_grey"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_asset_version_wrap">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assetdetails_asset_status"
            android:textColor="@color/brand_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assetdetails_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_green_darker"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Published" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assetdetails_asset_size_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_asset_status_wrap">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/assetdetails_asset_size"
            android:textColor="@color/brand_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assetdetails_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/brand_black"
            android:textSize="16sp"
            tools:text="22305" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
