<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:padding="20dp"
    tools:ignore="ContentDescription">

    <TextView
        android:id="@+id/assetdetails_reviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assetdetails_title_reviews"
        android:textAllCaps="true"
        android:textColor="@color/brand_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/assetdetails_reviews_icon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_title" />

    <TextView
        android:id="@+id/assetdetails_reviews_rating_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/assetdetails_reviews_average"
        android:textColor="@color/brand_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/assetdetails_reviews_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_icon"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_icon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/assetdetails_reviews_rating_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/brand_green_darker"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_rating_title"
        tools:text="4.8" />

    <TextView
        android:id="@+id/assetdetails_reviews_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/brand_grey_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_icon"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_rating_title"
        tools:text="Reviews total: 24" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/assetdetails_reviews_1"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="18dp"
        android:progressTint="@color/brand_green_darker"
        android:rating="1"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_count" />

    <ProgressBar
        android:id="@+id/assetdetails_reviews_1_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:progressBackgroundTint="@color/brand_grey_light"
        android:progressTint="@color/brand_grey_dark"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_1"
        app:layout_constraintEnd_toStartOf="@id/assetdetails_reviews_1_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_1"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_1"
        tools:progress="50" />

    <TextView
        android:id="@+id/assetdetails_reviews_1_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_green_darker"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_1"
        tools:text="5" />


    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/assetdetails_reviews_2"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:progressTint="@color/brand_green_darker"
        android:rating="2"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_1" />

    <ProgressBar
        android:id="@+id/assetdetails_reviews_2_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:progressBackgroundTint="@color/brand_grey_light"
        android:progressTint="@color/brand_grey_dark"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_2"
        app:layout_constraintEnd_toStartOf="@id/assetdetails_reviews_2_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_2"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_2"
        tools:progress="50" />

    <TextView
        android:id="@+id/assetdetails_reviews_2_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_green_darker"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_2"
        tools:text="5" />


    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/assetdetails_reviews_3"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:progressTint="@color/brand_green_darker"
        android:rating="3"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_2" />

    <ProgressBar
        android:id="@+id/assetdetails_reviews_3_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:progressBackgroundTint="@color/brand_grey_light"
        android:progressTint="@color/brand_grey_dark"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_3"
        app:layout_constraintEnd_toStartOf="@id/assetdetails_reviews_3_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_3"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_3"
        tools:progress="50" />

    <TextView
        android:id="@+id/assetdetails_reviews_3_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_green_darker"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_3"
        tools:text="5" />


    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/assetdetails_reviews_4"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:progressTint="@color/brand_green_darker"
        android:rating="4"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_3" />

    <ProgressBar
        android:id="@+id/assetdetails_reviews_4_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:progressBackgroundTint="@color/brand_grey_light"
        android:progressTint="@color/brand_grey_dark"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_4"
        app:layout_constraintEnd_toStartOf="@id/assetdetails_reviews_4_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_4"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_4"
        tools:progress="50" />

    <TextView
        android:id="@+id/assetdetails_reviews_4_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_green_darker"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_4"
        tools:text="5" />


    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/assetdetails_reviews_5"
        style="@style/Widget.MaterialRatingBar.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:progressTint="@color/brand_green_darker"
        android:rating="5"
        app:layout_constraintStart_toStartOf="@id/assetdetails_reviews_rating_title"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_4" />

    <ProgressBar
        android:id="@+id/assetdetails_reviews_5_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:progressBackgroundTint="@color/brand_grey_light"
        android:progressTint="@color/brand_grey_dark"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_5"
        app:layout_constraintEnd_toStartOf="@id/assetdetails_reviews_5_count"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_5"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_5"
        tools:progress="50" />

    <TextView
        android:id="@+id/assetdetails_reviews_5_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/brand_green_darker"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_5"
        tools:text="5" />


    <TextView
        android:id="@+id/assetdetails_reviews_sort_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/assetdetails_reviews_sortby"
        android:textColor="@color/brand_black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_5" />

    <Spinner
        android:id="@+id/assetdetails_reviews_sort_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:clipToPadding="false"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_sort_title"
        app:layout_constraintStart_toEndOf="@id/assetdetails_reviews_sort_title"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_sort_title"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assetdetails_reviews_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_sort_value"
        tools:itemCount="2"
        tools:listitem="@layout/assetdetails_item_review" />

    <ImageView
        android:id="@+id/assetdetails_reviews_scrim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_scrim"
        app:layout_constraintBottom_toBottomOf="@id/assetdetails_reviews_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/assetdetails_reviews_list" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/assetdetails_reviews_viewmore"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/brand_grey_lightest"
        android:text="@string/common_details_viewmore"
        android:textColor="@color/brand_green_darker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assetdetails_reviews_list"
        app:rippleColor="@color/brand_green" />

</androidx.constraintlayout.widget.ConstraintLayout>